@@ -22,10 +22,10 @@ import org.apache.camel.builder.RouteBuilder;
 public class QuartzStartDelayedWithReferenceTest extends QuartzStartDelayedTest {
 
     @BindToRegistry("interval")
-    private Long interval = new Long(2);
+    private Long interval = Long.valueOf(2);
 
     @BindToRegistry("count")
-    private Integer count = new Integer(1);
+    private Integer count = Integer.valueOf(1);
 
     @Override
     protected RouteBuilder createRouteBuilder() throws Exception {
