@@ -66,7 +66,7 @@ public class SqlProducerJSONTest extends CamelTestSupport {
 
         mock.assertIsSatisfied();
 
-        assertEquals(new Integer(4), jdbcTemplate.queryForObject("select count(*) from projects", Integer.class));
+        assertEquals(Integer.valueOf(4), jdbcTemplate.queryForObject("select count(*) from projects", Integer.class));
     }
 
     @Override
